init add Aliyun OSS required classes for Presto-Hive connector

--- a/presto-hive/pom.xml
+++ b/presto-hive/pom.xml
@@ -225,6 +225,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.apache.hadoop</groupId>
+            <artifactId>hadoop-aliyun</artifactId>
+            <version>3.3.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.thrift</groupId>
             <artifactId>libthrift</artifactId>
         </dependency>
