--- a/pom.xml
+++ b/pom.xml
@@ -506,7 +506,7 @@
             <dependency>
                 <groupId>io.prestosql.hadoop</groupId>
                 <artifactId>hadoop-apache</artifactId>
-                <version>3.2.0-9</version>
+                <version>3.2.0-10-SNAPSHOT</version>
             </dependency>
 
             <dependency>
